--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,29 +1,36 @@
 ---
 driver:
-  name: vagrant
-
-## The forwarded_port port feature lets you connect to ports on the VM guest via
-## localhost on the host.
-## see also: https://docs.vagrantup.com/v2/networking/forwarded_ports.html
-
-#  network:
-#    - ["forwarded_port", {guest: 80, host: 8080}]
+  name: azurerm
+  subscription_id: "<subscription-id>"
+  location: 'North Europe'
+  machine_size: 'Standard_D1'
 
 provisioner:
   name: chef_zero
-
-## require_chef_omnibus specifies a specific chef version to install. You can
-## also set this to `true` to always use the latest version.
-## see also: https://docs.chef.io/config_yml_kitchen.html
-
-#  require_chef_omnibus: 12.8.1
+  product_name: chef
+  product_version: 13.0.118
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: centos-7
+  - name: centos-7.6
+    driver:
+      image_urn: OpenLogic:CentOS:7.6:7.6.20181219
+      vm_name: centos-vm
+    transport:
+      ssh_key: ~/.ssh/azure
+
+  - name: windows-server
+    driver:
+      image_urn: MicrosoftWindowsServer:WindowsServer:2016-Datacenter:latest
+      vm_tags: 
+        ostype: windows
+      data_disks:
+        - lun: 0
+          disk_size_gb: 40
+    transport:
+      name: winrm
 
 suites:
   - name: default
